fix: in screenshot alert, the icon and title text are misaligned
Fixes #6770

--- a/plugins/plugin-client-common/web/scss/components/Alert/PatternFly.scss
+++ b/plugins/plugin-client-common/web/scss/components/Alert/PatternFly.scss
@@ -18,6 +18,7 @@
   white-space: normal;
 
   h4 {
+    margin: 0;
     font-size: inherit;
   }
 }
